cmake_minimum_required(VERSION 2.8)
project(myrtt)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(client SocketClientMat.cpp SocketMatTransmissionClient.cpp )
add_executable(server SocketServerMat.cpp SocketMatTransmissionServer.cpp )
target_link_libraries(client ${OpenCV_LIBS})
target_link_libraries(server ${OpenCV_LIBS})
