<?xml version="1.0"?>
<package  format="2">
  <name>stiff</name>
  <version>0.0.0</version>

  <description>
	This is a ROS implementation of test by bit RCIV
  </description>

  <maintainer email="jikaijin94@gmail.com">Jerry JI</maintainer>

  <license>BSD</license>

  <author email="jikaijin94@gmail.com">Jerry JI</author>
  
  
   <buildtool_depend>catkin</buildtool_depend>

  <build_depend>g++-static</build_depend>
  <build_depend>protobuf-dev</build_depend>
  <build_depend>python-sphinx</build_depend>
  <build_depend>message_generation</build_depend>  
  <!--<depend>stiff_water_msg</depend>-->

  <depend>ivcommon</depend>
  <depend>sensor_driver_msgs</depend>
  
  <depend>sensor_driver</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>libgflags-dev</depend>
  <depend>message_generatioon</depend>
  <depend>message_runtime</depend>
  <depend>nav_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>


  
 


  <export>
  </export>
</package>
