<?xml version="1.0"?>


<package format="2">
  <name>object_detector_msgs</name>
  <version>0.0.0</version>
  <description>
    ROS messages for the object_detector package.
  </description>
  <maintainer email="ZackLiu3714@gmail.com">
    The ivrc Authors
  </maintainer>
  <license>Apache 2.0</license>

  <url></url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  
  <build_depend>message_generation</build_depend>
</package>
